lib/src/stft_fft_plugin_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for stft_fft_plugin.h
class StftFftPluginBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  StftFftPluginBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  StftFftPluginBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int stft_fft_plugin_version() {
    return _stft_fft_plugin_version();
  }

  late final _stft_fft_plugin_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'stft_fft_plugin_version');
  late final _stft_fft_plugin_version =
      _stft_fft_plugin_versionPtr.asFunction<int Function()>();

  void generate_hanning_window(
    ffi.Pointer<ffi.Double> window,
    int size,
  ) {
    return _generate_hanning_window(
      window,
      size,
    );
  }

  late final _generate_hanning_windowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Double>, ffi.Int32)>>('generate_hanning_window');
  late final _generate_hanning_window = _generate_hanning_windowPtr
      .asFunction<void Function(ffi.Pointer<ffi.Double>, int)>();

  ffi.Pointer<FftResult> compute_real_fft(
    ffi.Pointer<ffi.Double> input,
    int input_length,
    double sampling_frequency,
  ) {
    return _compute_real_fft(
      input,
      input_length,
      sampling_frequency,
    );
  }

  late final _compute_real_fftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<FftResult> Function(ffi.Pointer<ffi.Double>, ffi.Int32,
              ffi.Double)>>('compute_real_fft');
  late final _compute_real_fft = _compute_real_fftPtr.asFunction<
      ffi.Pointer<FftResult> Function(ffi.Pointer<ffi.Double>, int, double)>();

  ffi.Pointer<FftResult> compute_magnitude_spectrum(
    ffi.Pointer<ffi.Double> pre_processed_input,
    int input_length,
    double sampling_frequency,
  ) {
    return _compute_magnitude_spectrum(
      pre_processed_input,
      input_length,
      sampling_frequency,
    );
  }

  late final _compute_magnitude_spectrumPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<FftResult> Function(ffi.Pointer<ffi.Double>, ffi.Int32,
              ffi.Double)>>('compute_magnitude_spectrum');
  late final _compute_magnitude_spectrum =
      _compute_magnitude_spectrumPtr.asFunction<
          ffi.Pointer<FftResult> Function(
              ffi.Pointer<ffi.Double>, int, double)>();

  void free_fft_result(
    ffi.Pointer<FftResult> result,
  ) {
    return _free_fft_result(
      result,
    );
  }

  late final _free_fft_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<FftResult>)>>(
          'free_fft_result');
  late final _free_fft_result =
      _free_fft_resultPtr.asFunction<void Function(ffi.Pointer<FftResult>)>();

  ffi.Pointer<WelchResult> compute_welch_spectrum(
    ffi.Pointer<ffi.Double> input,
    int input_length,
    double sampling_frequency,
    double frequency_resolution,
    double overlap_percent,
    int weighting_type,
    double rms_range_multiplier,
    int is_acc,
    double db_ref,
  ) {
    return _compute_welch_spectrum(
      input,
      input_length,
      sampling_frequency,
      frequency_resolution,
      overlap_percent,
      weighting_type,
      rms_range_multiplier,
      is_acc,
      db_ref,
    );
  }

  late final _compute_welch_spectrumPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<WelchResult> Function(
              ffi.Pointer<ffi.Double>,
              ffi.Int32,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Double,
              ffi.Int32,
              ffi.Double)>>('compute_welch_spectrum');
  late final _compute_welch_spectrum = _compute_welch_spectrumPtr.asFunction<
      ffi.Pointer<WelchResult> Function(ffi.Pointer<ffi.Double>, int, double,
          double, double, int, double, int, double)>();

  void free_welch_result(
    ffi.Pointer<WelchResult> result,
  ) {
    return _free_welch_result(
      result,
    );
  }

  late final _free_welch_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<WelchResult>)>>(
          'free_welch_result');
  late final _free_welch_result = _free_welch_resultPtr
      .asFunction<void Function(ffi.Pointer<WelchResult>)>();

  ffi.Pointer<StftResult> compute_stft_spectrogram(
    ffi.Pointer<ffi.Double> input,
    int input_length,
    int chunk_size,
    double sampling_frequency,
    int is_acc,
    double db_ref,
    int weighting_type,
    double overlap_percent,
    double rms_range_multiplier,
    int target_width,
    int target_height,
    double start_freq_hz,
    double end_freq_hz,
    double start_time,
    double end_time,
    double total_duration,
    ffi.Pointer<ffi.Int32> color_lut,
    int color_lut_size,
    int auto_calc_min_max,
    double min_level,
    double max_level,
  ) {
    return _compute_stft_spectrogram(
      input,
      input_length,
      chunk_size,
      sampling_frequency,
      is_acc,
      db_ref,
      weighting_type,
      overlap_percent,
      rms_range_multiplier,
      target_width,
      target_height,
      start_freq_hz,
      end_freq_hz,
      start_time,
      end_time,
      total_duration,
      color_lut,
      color_lut_size,
      auto_calc_min_max,
      min_level,
      max_level,
    );
  }

  late final _compute_stft_spectrogramPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StftResult> Function(
              ffi.Pointer<ffi.Double>,
              ffi.Int32,
              ffi.Int32,
              ffi.Double,
              ffi.Int32,
              ffi.Double,
              ffi.Int32,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Int32,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Int32>,
              ffi.Int32,
              ffi.Int32,
              ffi.Double,
              ffi.Double)>>('compute_stft_spectrogram');
  late final _compute_stft_spectrogram =
      _compute_stft_spectrogramPtr.asFunction<
          ffi.Pointer<StftResult> Function(
              ffi.Pointer<ffi.Double>,
              int,
              int,
              double,
              int,
              double,
              int,
              double,
              double,
              int,
              int,
              double,
              double,
              double,
              double,
              double,
              ffi.Pointer<ffi.Int32>,
              int,
              int,
              double,
              double)>();

  ffi.Pointer<FilteredPixelResult> filter_and_generate_pixels(
    ffi.Pointer<ffi.Double> spectrogram,
    int spec_rows,
    int spec_cols,
    double sampling_frequency,
    int chunk_size,
    double total_duration,
    double start_freq_hz,
    double end_freq_hz,
    double start_time,
    double end_time,
    int target_width,
    int target_height,
    ffi.Pointer<ffi.Int32> color_lut,
    int color_lut_size,
    double min_level,
    double max_level,
  ) {
    return _filter_and_generate_pixels(
      spectrogram,
      spec_rows,
      spec_cols,
      sampling_frequency,
      chunk_size,
      total_duration,
      start_freq_hz,
      end_freq_hz,
      start_time,
      end_time,
      target_width,
      target_height,
      color_lut,
      color_lut_size,
      min_level,
      max_level,
    );
  }

  late final _filter_and_generate_pixelsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<FilteredPixelResult> Function(
              ffi.Pointer<ffi.Double>,
              ffi.Int32,
              ffi.Int32,
              ffi.Double,
              ffi.Int32,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Int32>,
              ffi.Int32,
              ffi.Double,
              ffi.Double)>>('filter_and_generate_pixels');
  late final _filter_and_generate_pixels =
      _filter_and_generate_pixelsPtr.asFunction<
          ffi.Pointer<FilteredPixelResult> Function(
              ffi.Pointer<ffi.Double>,
              int,
              int,
              double,
              int,
              double,
              double,
              double,
              double,
              double,
              int,
              int,
              ffi.Pointer<ffi.Int32>,
              int,
              double,
              double)>();

  void free_filtered_pixel_result(
    ffi.Pointer<FilteredPixelResult> result,
  ) {
    return _free_filtered_pixel_result(
      result,
    );
  }

  late final _free_filtered_pixel_resultPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<FilteredPixelResult>)>>(
      'free_filtered_pixel_result');
  late final _free_filtered_pixel_result = _free_filtered_pixel_resultPtr
      .asFunction<void Function(ffi.Pointer<FilteredPixelResult>)>();

  ffi.Pointer<PixelBufferResult> generate_pixel_buffer(
    ffi.Pointer<ffi.Double> filtered_data,
    int filtered_rows,
    int filtered_cols,
    int target_width,
    int target_height,
    ffi.Pointer<ffi.Int32> color_lut,
    int color_lut_size,
    double min_level,
    double max_level,
  ) {
    return _generate_pixel_buffer(
      filtered_data,
      filtered_rows,
      filtered_cols,
      target_width,
      target_height,
      color_lut,
      color_lut_size,
      min_level,
      max_level,
    );
  }

  late final _generate_pixel_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PixelBufferResult> Function(
              ffi.Pointer<ffi.Double>,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Int32>,
              ffi.Int32,
              ffi.Double,
              ffi.Double)>>('generate_pixel_buffer');
  late final _generate_pixel_buffer = _generate_pixel_bufferPtr.asFunction<
      ffi.Pointer<PixelBufferResult> Function(ffi.Pointer<ffi.Double>, int, int,
          int, int, ffi.Pointer<ffi.Int32>, int, double, double)>();

  void free_pixel_buffer_result(
    ffi.Pointer<PixelBufferResult> result,
  ) {
    return _free_pixel_buffer_result(
      result,
    );
  }

  late final _free_pixel_buffer_resultPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<PixelBufferResult>)>>(
      'free_pixel_buffer_result');
  late final _free_pixel_buffer_result = _free_pixel_buffer_resultPtr
      .asFunction<void Function(ffi.Pointer<PixelBufferResult>)>();

  void free_stft_result(
    ffi.Pointer<StftResult> result,
  ) {
    return _free_stft_result(
      result,
    );
  }

  late final _free_stft_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<StftResult>)>>(
          'free_stft_result');
  late final _free_stft_result =
      _free_stft_resultPtr.asFunction<void Function(ffi.Pointer<StftResult>)>();
}

/// ── FFT Engine (fft_engine.c) ──
final class FftResult extends ffi.Struct {
  external ffi.Pointer<ffi.Double> frequencies;

  external ffi.Pointer<ffi.Double> magnitudes;

  @ffi.Int32()
  external int bin_count;
}

/// ── Welch's Method (welch_method.c) ──
final class WelchResult extends ffi.Struct {
  external ffi.Pointer<ffi.Double> frequencies;

  external ffi.Pointer<ffi.Double> magnitudes;

  @ffi.Int32()
  external int bin_count;

  /// [이슈 #2 / ADR-003] dB 변환 직전 단계의 선형 amplitude.
  /// Hanning + 윈도우 정규화 + RMS 스케일 + weighting + RMS smoothing 적용 후, ENBW 보정 전.
  /// df·N 범위 RMS 평균 계산을 위해 외부에 노출. amp_count == bin_count.
  external ffi.Pointer<ffi.Double> amplitude;

  @ffi.Int32()
  external int amp_count;
}

/// ── STFT Pipeline (stft_pipeline.c) ──
final class StftResult extends ffi.Struct {
  external ffi.Pointer<ffi.Double> spectrogram;

  @ffi.Int32()
  external int spec_rows;

  @ffi.Int32()
  external int spec_cols;

  /// [이슈 #2 / ADR-003] dB 변환 직전 단계의 선형 amplitude.
  /// spectrogram 과 동일한 bilinear_resample 통과 후. amp_rows == spec_rows, amp_cols == spec_cols.
  /// 변환 일관성(amplitude→dB == spectrogram, 1e-6 이내) 은 target 이 raw grid 와 일치할 때만 1:1 보장.
  external ffi.Pointer<ffi.Double> amplitude;

  @ffi.Int32()
  external int amp_rows;

  @ffi.Int32()
  external int amp_cols;

  external ffi.Pointer<ffi.Uint8> pixels;

  @ffi.Int32()
  external int pixel_width;

  @ffi.Int32()
  external int pixel_height;

  @ffi.Double()
  external double min_level;

  @ffi.Double()
  external double max_level;
}

final class FilteredPixelResult extends ffi.Struct {
  external ffi.Pointer<ffi.Double> filtered_data;

  @ffi.Int32()
  external int filtered_rows;

  @ffi.Int32()
  external int filtered_cols;

  external ffi.Pointer<ffi.Uint8> pixels;

  @ffi.Int32()
  external int pixel_width;

  @ffi.Int32()
  external int pixel_height;
}

final class PixelBufferResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> pixels;

  @ffi.Int32()
  external int pixel_width;

  @ffi.Int32()
  external int pixel_height;
}
